@@ -1,3 +1,9 @@
+Fri Aug 21 14:38:54 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/bcp.c src/tds/convert.c src/tds/login.c:
+	* src/tds/numeric.c src/tds/token.c src/tds/unittests/t0008.c:
+	- make g__numeric_bytes_per_prec const solving problem
+	- connecting to both Sybase and mssql at the same time
+
 Fri Aug 21 14:00:23 CEST 2002   Frediano Ziglio <freddy77@angelfire.com>
 	* src/ctlib/unittests/t0007.c src/ctlib/unittests/Makefile.am:
 	* src/ctlib/unittests/t0003.c:
